Closed Bug 1078847 Opened 11 years ago Closed 11 years ago

GenerateAsymmetricKeyTask fails if no private key usages are passed

Categories

(Core :: DOM: Security, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
firefox35 --- fixed
firefox36 --- fixed

People

(Reporter: ttaubert, Assigned: ttaubert)

References

Details

Attachments

(1 file)

Small typo from bug 1037892. Also I think we should modify the condition to allow generating a key pair where only the public *or* the private key has any usages. This behavior isn't defined in the spec afaict, should it be added? Blocking DH as this makes a few tests fail there.
(In reply to Tim Taubert [:ttaubert] from comment #0) > This behavior isn't defined in the spec afaict, should it be added? I was referring to behavior of bailing out and making .generateKey() fail if there are no valid usages for any of the keys in the key pair.
Attachment #8500736 - Flags: review?(rlb) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Comment on attachment 8500736 [details] [diff] [review] 0007-Bug-1078847-GenerateAsymmetricKeyTask-should-allow-g.patch Approval Request Comment [Feature/regressing bug #]: bug 1037892 [User impact if declined]: Asymmetric key generation fails when the private key h as no usage. [Describe test coverage new/current, TBPL]: includes a test that works fine on m-c [Risks and why]: Low risk. [String/UUID change made/needed]: None. We need this for bug 1034856.
Attachment #8500736 - Flags: approval-mozilla-aurora?
Attachment #8500736 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: